# vertixia-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-component.json  automation_component.py  email_agent.py  intelligence_component.py  reasoning-component.json  text-analyzer-component.yaml  text_analyzer.py  workflow-component.json
tests/: test_basic.py
vertixia_sdk/: __init__.py
vertixia_sdk/base/: agent.py  component.py  tool.py  workflow.py
vertixia_sdk/cli/: __init__.py  commands.py  main.py
vertixia_sdk/config/: __init__.py  models.py  validation.py
vertixia_sdk/marketplace/: __init__.py  registry_integration.py  store_extension.py
vertixia_sdk/templates/: __init__.py  itrs_config.yaml  itrs_reasoning.py
vertixia_sdk/utils/: __init__.py  discovery.py
